feat(auth): 补充邮件找回与邮件配置
